list and map connectivity update

--- a/index.html
+++ b/index.html
@@ -135,6 +135,14 @@
         .book-button:hover {
             background-color: #059669;
         }
+
+        /* Add this CSS for highlighting the selected restaurant card */
+        .selected {
+            background-color: #4a5568;
+            /* Adjust the color as needed */
+            border: 2px solid #10b981;
+            /* Highlight border color */
+        }
     </style>
     <!-- Include MapTiler SDK -->
     <script src="https://cdn.maptiler.com/maptiler-sdk-js/v1.1.1/maptiler-sdk.umd.js"></script>
