--- a/index.html
+++ b/index.html
@@ -5,218 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>momokji - Restaurant Finder</title>
-    <style>
-        /* Reset default margins and paddings */
-        body,
-        html {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            height: 100%;
-            overflow: hidden;
-        }
-
-        /* Main container for the application */
-        .container {
-            display: flex;
-            height: 100%;
-            background-color: #1a202c;
-            color: white;
-        }
-
-        /* Sidebar styles */
-        .sidebar {
-            width: 400px;
-            overflow-y: auto;
-            border-right: 1px solid #4a5568;
-            padding: 20px;
-            box-sizing: border-box;
-            scrollbar-width: thin;
-            scrollbar-color: #4a5568 #1a202c;
-        }
-
-        /* Webkit browsers custom scrollbar */
-        .sidebar::-webkit-scrollbar {
-            width: 8px;
-        }
-
-        .sidebar::-webkit-scrollbar-track {
-            background: #1a202c;
-        }
-
-        .sidebar::-webkit-scrollbar-thumb {
-            background-color: #4a5568;
-            border-radius: 4px;
-        }
-
-        /* Container for the map */
-        .map-container {
-            flex-grow: 1;
-            position: relative;
-        }
-
-        /* Map element */
-        #map {
-            height: 100%;
-            width: 100%;
-        }
-
-        /* Main heading style */
-        h1 {
-            color: #10b981;
-            margin-bottom: 20px;
-        }
-
-        /* Search input style */
-        .search-input {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-            background-color: #2d3748;
-            border: 1px solid #4a5568;
-            color: white;
-            box-sizing: border-box;
-        }
-
-        /* Restaurant card style */
-        .restaurant-card {
-            background-color: #2d3748;
-            border: 1px solid #4a5568;
-            border-radius: 5px;
-            padding: 15px;
-            margin-bottom: 15px;
-            cursor: pointer;
-        }
-
-        /* Hover effect for restaurant card */
-        .restaurant-card:hover {
-            background-color: #4a5568;
-        }
-
-        /* Restaurant name style */
-        .restaurant-name {
-            color: #10b981;
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-
-        /* Restaurant info style */
-        .restaurant-info {
-            color: #a0aec0;
-            font-size: 0.9em;
-        }
-
-        /* Rating style */
-        .rating {
-            color: #fbbf24;
-        }
-
-        /* Selected restaurant info box */
-        .selected-restaurant {
-            position: absolute;
-            bottom: 20px;
-            left: 20px;
-            background-color: #2d3748;
-            border: 1px solid #4a5568;
-            border-radius: 5px;
-            padding: 15px;
-            width: 250px;
-            z-index: 1000;
-            display: none;
-        }
-
-        /* Book button style */
-        .book-button,
-        .map-button {
-            background-color: #10b981;
-            color: white;
-            border: none;
-            padding: 10px;
-            width: 100%;
-            margin-top: 10px;
-            cursor: pointer;
-        }
-
-        /* Hover effect for book button and map button */
-        .book-button:hover,
-        .map-button:hover {
-            background-color: #059669;
-        }
-
-        /* Add this CSS for highlighting the selected restaurant card */
-        .selected {
-            background-color: #4a5568;
-            /* Adjust the color as needed */
-            border: 2px solid #10b981;
-            /* Highlight border color */
-        }
-
-        /* New Left Sidebar styles */
-        #left-sidebar {
-            width: 300px;
-            overflow-y: auto;
-            border-right: 1px solid #4a5568;
-            padding: 20px;
-            box-sizing: border-box;
-            scrollbar-width: thin;
-            scrollbar-color: #4a5568 #1a202c;
-        }
-
-        #left-sidebar::-webkit-scrollbar {
-            width: 8px;
-        }
-
-        #left-sidebar::-webkit-scrollbar-track {
-            background: #1a202c;
-        }
-
-        #left-sidebar::-webkit-scrollbar-thumb {
-            background-color: #4a5568;
-            border-radius: 4px;
-        }
-
-        /* Add styles for filter groups */
-        .filter-group {
-            margin-bottom: 20px;
-        }
-
-        .filter-group label {
-            display: block;
-            margin-bottom: 5px;
-            color: #a0aec0;
-        }
-
-        .filter-group select,
-        .filter-group input[type="range"] {
-            width: 100%;
-            padding: 8px;
-            background-color: #2d3748;
-            border: 1px solid #4a5568;
-            color: white;
-            box-sizing: border-box;
-            border-radius: 5px;
-        }
-
-        .price-range-labels {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 5px;
-            color: #a0aec0;
-        }
-
-        .close-button {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            font-size: 24px;
-            cursor: pointer;
-            color: #a0aec0;
-        }
-
-        .close-button:hover {
-            color: #fff;
-        }
-    </style>
+    <link rel="stylesheet" href="index.css">
     <!-- Include MapTiler SDK -->
     <script src="https://cdn.maptiler.com/maptiler-sdk-js/v1.1.1/maptiler-sdk.umd.js"></script>
     <link href="https://cdn.maptiler.com/maptiler-sdk-js/v1.1.1/maptiler-sdk.css" rel="stylesheet" />
